Update moving direction to the snake