@@ -1,12 +1,14 @@
 import javax.swing.*;
 import java.awt.*;
+import java.awt.event.KeyEvent;
+import java.awt.event.KeyListener;
 import java.util.*;
 import java.util.Timer;
 import java.util.TimerTask;
 
 //TIP To <b>Run</b> code, press <shortcut actionId="Run"/> or
 // click the <icon src="AllIcons.Actions.Execute"/> icon in the gutter.
-public class Main extends JPanel {
+public class Main extends JPanel implements KeyListener {
     public static final int CELL_SIZE = 20;
     public static int width = 400;
     public static int height = 400;
@@ -29,6 +31,7 @@ public class Main extends JPanel {
             }
         },0,speed);
         direction = "Right";
+        addKeyListener(this);
     }
 
     @Override
@@ -53,8 +56,10 @@ public class Main extends JPanel {
             snakeY += CELL_SIZE;
         }
         Node newHead = new Node(snakeX, snakeY);
-        snake.getSnakeBody().remove(snake.getSnakeBody().size()-1);
-        snake.getSnakeBody().add(0, newHead);
+        snake.getSnakeBody().removeLast();
+        snake.getSnakeBody().addFirst(newHead);
+
+        requestFocusInWindow();
     }
 
     @Override
@@ -70,5 +75,28 @@ public class Main extends JPanel {
         window.setLocationRelativeTo(null);
         window.setVisible(true);
         window.setResizable(false);
+    }
+
+    @Override
+    public void keyTyped(KeyEvent e) {
+
+    }
+
+    @Override
+    public void keyPressed(KeyEvent e) {
+        if (e.getKeyCode() == 37 && !direction.equals("Right")) {
+            direction = "Left";
+        } else if (e.getKeyCode() == 38 && !direction.equals("Down")) {
+            direction = "Up";
+        } else if (e.getKeyCode() == 39 && !direction.equals("Left")) {
+            direction = "Right";
+        } else if (e.getKeyCode() == 40 && !direction.equals("Up")) {
+            direction = "Down";
+        }
+    }
+
+    @Override
+    public void keyReleased(KeyEvent e) {
+
     }
 }
